# cplusplus-cmake-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt
src/myApp/: CMakeLists.txt  myAppVersion.hpp.in
src/myApp/include/: main.hpp  version.hpp
src/myApp/source/: main.cpp
src/mylibrary/: CMakeLists.txt  myLibraryVersion.hpp.in
src/mylibrary/include/mylibrary/: MyLibrary.hpp  version.hpp
src/mylibrary/source/mylibrary/: MyLibrary.cpp
